# AfriConnect-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0339344ebcfc_added_max_investment_amount.py
app/: __init__.py  config.py  database.py  main.py
app/api/v1/: auth.py  founder.py  investor.py  landing.py  partnership.py
app/crud/: __init__.py  founder.py  investor.py  message.py  partnership.py  user.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  founder.py  investor.py  message.py  partnership.py  user.py
app/schemas/: auth.py  common.py  founder.py  investor.py  landing.py  partnership.py
app/services/: auth_service.py
app/utils/: dependencies.py  errors.py  jwt_handler.py  security.py
