[build-system]
requires = ["setuptools>=68", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "africonnect-backend"
version = "0.1.0"
description = "AfriConnect - Investment Discovery Platform Backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "AfriConnect Team"},
]

dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.0",
    "sqlmodel==0.0.16",
    "sqlalchemy==2.0.27",
    "alembic==1.13.1",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.1",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "email-validator==2.1.0.post1",
    "psycopg2>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "black==24.1.1",
    "ruff==0.2.0",
    "mypy==1.8.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
